# evendup

./: LICENSE  Readme.md  meson.build
data/: evendup@.service.in
src/: main.c
